# QML-QCNN

./: README.md
qcnn-medmnist/: QCNN_notebook.ipynb  pyproject.toml
qcnn-medmnist/.ipynb_checkpoints/: QCNN_notebook-checkpoint.ipynb  README-checkpoint.md  pyproject-checkpoint.toml
qcnn-medmnist/data/processed/pneumoniamnist/: test.pt  val.pt
qcnn-medmnist/data/processed/retinamnist/: test.pt  train.pt  val.pt
qcnn-medmnist/logs/bloodmnist_run_002/: best_model.pt  metrics.csv  report_meta.json
qcnn-medmnist/logs/bloodmnist_run_003/: metrics.csv
qcnn-medmnist/logs/bloodmnist_run_008/: best_model.pt  metrics.csv
qcnn-medmnist/logs/bloodmnist_run_009/: best_model.pt  metrics.csv
qcnn-medmnist/logs/bloodmnist_run_010/: best_model.pt  metrics.csv
qcnn-medmnist/logs/bloodmnist_run_011/: best_model.pt  metrics.csv
qcnn-medmnist/logs/bloodmnist_run_014/: best_model.pt  metrics.csv  report_meta.json
qcnn-medmnist/logs/bloodmnist_run_020/: best_model.pt  metrics.csv
qcnn-medmnist/logs/bloodmnist_run_022/: best_model.pt  metrics.csv
qcnn-medmnist/logs/bloodmnist_run_023/: best_model.pt  metrics.csv  report_meta.json
qcnn-medmnist/logs/bloodmnist_run_025/: best_model.pt  metrics.csv
qcnn-medmnist/reports/: parameter_list.txt
qcnn-medmnist/reports/pneumoniamnist_run_3q_004/tables/: preds.csv
qcnn-medmnist/reports/pneumoniamnist_run_3q_005/tables/: preds.csv
qcnn-medmnist/src/qcnn_medmnist/: __init__.py
qcnn-medmnist/src/qcnn_medmnist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+40 files in other folders)
