[project]
name = "qcnn-medmnist"          # nome importabile:  qcnn_medmnist
version = "0.1.0"
description = "Quantum Convolutional Neural Network on medMNIST in Qiskit"
authors = [
  { name = "Leonardo Tomei, Antonio Mosca", email = "l.tomei9@studenti.unipi.it , a.mosca7@studenti.unipi.it" }
]
readme = "README.md"
requires-python = ">=3.11"

# Dipendenze principali (runtime)
dependencies = [
  "qiskit ~=1.0",
  "qiskit-aer ~=0.14",
  "torch ~=2.2",
  "torchvision ~=0.17",
  "numpy >=1.26",
  "pandas >=2.2",
  "scikit-learn >=1.5",
  "hydra-core >=1.3",
  "loguru >=0.7",
  "matplotlib >=3.9",
  "medmnist >=2.2.3",
  "tqdm >=4.66",
  "seaborn >=0.13.2"
]

# Dipendenze opzionali per sviluppo e test
[project.optional-dependencies]
dev = [
  "pytest >=8.0",
  "pytest-cov",
  "black >=24.3",
  "isort >=5.13",
  "pre-commit"
]

# Script CLI (li useremo più avanti)
[project.scripts]
qcnn-preprocess = "qcnn_medmnist.scripts.preprocess:cli"
qcnn-train      = "qcnn_medmnist.scripts.train:cli"
qcnn-benchmark  = "qcnn_medmnist.scripts.benchmark:cli"
qcnn-report = "qcnn_medmnist.scripts.report:cli"
qcnn-plot-curves = "qcnn_medmnist.scripts.plot_curves:cli"
qcnn-heatmap = "qcnn_medmnist.scripts.heatmap:cli"

# ------------------------------ build -------------------------------
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"